--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="green">#4F7670</color>
     <color name="yellow">#F9F1E6</color>
+    <color name="transparent">#000000</color>
 </resources>
