--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/yellow"
     tools:context=".ui.view.HomeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/txt_main_language"
+        android:layout_width="320dp"
+        android:layout_height="35dp"
+        android:background="@color/green"
+        android:gravity="center"
+        android:text="@string/home_lan_tmp"
+        android:textColor="@color/yellow"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@id/btn_main_record"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_main_record"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
+        android:background="@drawable/bd_home_btn"
+        android:text="@string/home_btn_record"
+        android:textColor="@color/yellow"
+        android:textSize="30sp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_main_language"
+        app:layout_constraintBottom_toTopOf="@id/btn_main_camera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <Button
+        android:id="@+id/btn_main_camera"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
+        android:background="@drawable/bd_home_btn"
+        android:text="@string/home_btn_camera"
+        android:textColor="@color/yellow"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_main_gallery"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_main_record" />
+
+    <Button
+        android:id="@+id/btn_main_gallery"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
+        android:background="@drawable/bd_home_btn"
+        android:text="@string/home_btn_gallery"
+        android:textColor="@color/yellow"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_main_camera" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
