[feat] 필요한 컬러 및 문자열 정의

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#4F7670</color>
     <color name="yellow">#F9F1E6</color>
     <color name="transparent">#000000</color>
+    <color name="stroke">#CCCCCC</color>
 </resources>
