--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.view.home.HomeFragment">
     <TextView
         android:id="@+id/txt_main_language"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="35dp"
         android:background="@color/green"
         android:gravity="center"
@@ -16,8 +16,6 @@
         android:textColor="@color/yellow"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/btn_main_record"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,15 +24,13 @@
 
     <Button
         android:id="@+id/btn_main_record"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="80dp"
         android:background="@drawable/bd_common_btn"
         android:text="@string/home_btn_record"
         android:textColor="@color/yellow"
         android:textSize="30sp"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
         app:layout_constraintTop_toBottomOf="@id/txt_main_language"
         app:layout_constraintBottom_toTopOf="@id/btn_main_camera"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +38,7 @@
 
     <Button
         android:id="@+id/btn_main_camera"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="80dp"
         android:background="@drawable/bd_common_btn"
         android:text="@string/home_btn_camera"
@@ -50,8 +46,6 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_marginTop="60dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
         app:layout_constraintBottom_toTopOf="@id/btn_main_gallery"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +53,7 @@
 
     <Button
         android:id="@+id/btn_main_gallery"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="80dp"
         android:background="@drawable/bd_common_btn"
         android:text="@string/home_btn_gallery"
@@ -67,8 +61,6 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_marginTop="60dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
