--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,13 +9,15 @@
     <TextView
         android:id="@+id/txt_main_language"
         android:layout_width="320dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:background="@color/green"
         android:gravity="center"
         android:text="@string/home_lan_tmp"
         android:textColor="@color/yellow"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@id/btn_main_record"
         app:layout_constraintEnd_toEndOf="parent"
