--- a/app/src/main/res/layout/fragment_radio.xml
+++ b/app/src/main/res/layout/fragment_radio.xml
@@ -35,6 +35,7 @@
         android:background="@drawable/bd_content_result"
         android:padding="20dp"
         android:textSize="30sp"
+        android:enabled="false"
         app:layout_constraintBottom_toTopOf="@id/btn_radio_play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -44,7 +45,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_radio_play"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:background="@drawable/bd_common_btn"
         android:text="@string/radio_play"
         android:textColor="@color/yellow"
@@ -65,7 +66,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_radio_stop"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:background="@drawable/bd_common_btn"
         android:text="@string/radio_stop"
         android:textColor="@color/yellow"
@@ -84,21 +85,21 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_radio_finish"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:background="@drawable/bd_common_btn"
+        android:paddingStart="40dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="40dp"
+        android:paddingBottom="20dp"
         android:text="@string/radio_finish"
         android:textColor="@color/yellow"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"
         app:layout_constraintBottom_toBottomOf="@id/btn_radio_play"
-        app:layout_constraintStart_toEndOf="@id/btn_radio_stop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btn_radio_play" />
-
+        app:layout_constraintStart_toEndOf="@id/btn_radio_stop"
+        app:layout_constraintTop_toTopOf="@id/btn_radio_play"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
